DI refactor; request param refactor